<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="10dp"
                android:text="@string/user" />

            <EditText
                android:id="@+id/edtUserL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_weight="1" >

                <requestFocus />
            </EditText>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pass"
                android:layout_weight="1"
                android:paddingLeft="10dp" />

            <EditText
                android:id="@+id/edtPassL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_weight="1"
                android:inputType="textPassword" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <Button
                android:id="@+id/btnThuLai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lamtrang"
                android:layout_weight="1"
                android:onClick="Clear" />

            <Button
                android:id="@+id/btnDangNhap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dangnhap"
                android:layout_weight="1" 
                android:onClick="Login"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:text="@string/cauhoi" />

            <Button
                android:id="@+id/btnDangKy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.52"
                android:background="#00000000"
                android:text="@string/dangky"
                android:textColor="#6699FF"
                android:paddingRight="50dp"
                android:onClick="Add" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
